# jaime_core

./: README.md  forks.rosinstall  jaime.rosinstall  kobuki.rosinstall
arduino_controller/: CMakeLists.txt  package.xml
arduino_controller/config/: rosserial.yaml
arduino_controller/firmware/ServoControl_mod/: ServoControl_mod.ino
arduino_controller/firmware/ServoLeds/: ServoLeds.ino
arduino_controller/launch/: arduino_controller.launch
battery_info/: CMakeLists.txt  package.xml
battery_info/launch/: battery.launch
battery_info/src/: battery.py
depth_to_sampled_pointcloud/: CMakeLists.txt  package.xml
depth_to_sampled_pointcloud/src/: depth_to_sampled_pointcloud.py
inka_description/: CMakeLists.txt  package.xml
inka_description/launch/: load_model.launch
inka_description/urdf/: kobuki.urdf.xacro  kobuki_standalone.urdf.xacro
inka_joy/: CMakeLists.txt  package.xml
inka_joy/config/: joystick_base.yaml
inka_joy/launch/: joysticks.launch
inka_joy/launch/common/: driver.xml  driver_item.xml  joy_interface.xml
inka_joy/launch/includes/: velocity_smoother.launch.xml
inka_joy/src/: joy_base.py
inka_sim/inka_gazebo/: CMakeLists.txt  package.xml
inka_sim/inka_gazebo/launch/: controllable_object.launch  inka.launch
inka_sim/inka_sim/: package.xml
jaime_controller/: CMakeLists.txt  package.xml
jaime_controller/config/: jaime_control.yaml
jaime_controller/launch/: jaime_control.launch
jaime_core/: CMakeLists.txt  package.xml
jaime_description/launch/: load_model.launch  view_model.launch
jaime_description/meshes/meshes_jaime/: base_segment.stl  middle_link.stl  middle_segment.stl  tablet.stl  top_segment.stl  upper_link.stl  upper_segment.stl
jaime_description/robots/: jaime_asus.urdf.xacro  jaime_hokuyo.urdf.xacro  jaime_realsense.urdf.xacro  kobuki_standalone.urdf.xacro
jaime_description/urdf/: jaime.urdf.xacro  jaime_asus.urdf.xacro  jaime_asus_gazebo.urdf.xacro  jaime_base+cuello.urdf.xacro  jaime_gazebo.urdf.xacro  jaime_hokuyo.urdf.xacro  jaime_hokuyo_gazebo.urdf.xacro  jaime_realsense.urdf.xacro  jaime_realsense_gazebo.urdf.xacro  jaime_sensors_properties.urdf.xacro  jaime_standalone.urdf.xacro  kobuki.urdf.xacro  laser.xacro
jaime_gazebo/: CMakeLists.txt
jaime_gazebo/launch/: jaime.launch  jaime_cuello.launch  jaime_world.launch  world.launch
jaime_joy/: CMakeLists.txt  package.xml
jaime_joy/config/: driver.yaml  joystick_base.yaml
jaime_joy/launch/: joysticks.launch
jaime_joy/launch/common/: driver.xml  driver_item.xml  joy_interface.xml
jaime_joy/launch/includes/: velocity_smoother.launch.xml
jaime_joy/src/: jaime_joy_node.py  jaime_joy_node_aceleracion.py  joy_base.py
jaime_joy/src/jaime_joy/: xbox.py
jaime_rviz/: CMakeLists.txt  package.xml
jaime_rviz/config/: loclaization.rviz  map.rviz  navigation.rviz
jaime_rviz/launch/: rviz_launcher.launch
jaime_sim/inka_gazebo/: CMakeLists.txt
jaime_sim/inka_gazebo/launch/: controllable_object.launch  inka.launch
jaime_sim/jaime_gazebo/: package.xml
jaime_sim/jaime_gazebo/launch/: jaime.launch  jaime_gazebo.launch  jaime_rviz.launch  laser.launch  robot.launch
jaime_sim/jaime_gazebo/launch/include/: robot.launch.xml
jaime_sim/jaime_sim/: CMakeLists.txt  package.xml
merge_laser/: CMakeLists.txt  package.xml
merge_laser/launch/: dp2laser.launch  lasermerger.launch
phone_handler/: CMakeLists.txt  package.xml
phone_handler/src/: TcpServer.py
robot_status/: CMakeLists.txt  package.xml
robot_status/launch/: status.launch
robot_status/src/: colission_sound.py  shutdown_srv.py  status.py  teleop_safety.py
sparse_depth_image_proc/: CMakeLists.txt  nodelet_plugins.xml  package.xml
sparse_depth_image_proc/include/sparse_depth_image_proc/: depth_conversions.h  depth_traits.h
sparse_depth_image_proc/launch/: cloud_sparse.launch
sparse_depth_image_proc/src/nodelets/: sparse_point_cloud_xyz.cpp
uchile_cmd_vel_mux/config/: mux.yaml  safety_mux.yaml
uchile_cmd_vel_mux/launch/: mux.launch
uchile_common/transform_server/: CMakeLists.txt  package.xml
uchile_common/transform_server/launch/: transformers.launch
uchile_knowledge/uchile_maps/launch/: map_analyzer.launch
uchile_knowledge/uchile_maps/maps/: map.sem_map
uchile_knowledge/uchile_pose_server/launch/: pose_server.launch
