<package>
  <name>sparse_depth_image_proc</name>
  <version>1.0.0</version>
  <description>

     Nodelet based on the depth_image_proc, its added a sparse
     Point cloud conformed of 1000 points uniformed sampled from
     a depth image.

  </description>
  <author>Patrick Mihelich</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steven Macenski</maintainer>
  <maintainer email="software@autonomoustuff.com">Autonomoustuff team</maintainer>
  <license>BSD</license>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>rostest</test_depend>

  <build_depend>boost</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
</package>
