<?xml version="1.0"?>
<package format="2">
  
    <!-- PACKAGE INFORMATION -->
    <!-- - - - - - - - - - - -->

    <name>bender_sim</name>
    <version>0.0.1</version>

    <description>Manages simulation environments for Bender</description>
    <maintainer email="inkahobreakers@gmail.com">
      Bender Team - UChile Homebreakers</maintainer>
    <author     email="inkahomebreakers@gmail.com">
      Bender Team - UChile Homebreakers</author>
    <license>TODO</license>

    <!-- about bender and related repository -->
    <url type="website">bender.li2.uchile.cl</url>
    <url type="bugtracker">
      https://bitbucket.org/uchile-robotics-die/bender_base_layer/issues</url>
    <url type="repository">
      https://bitbucket.org/uchile-robotics-die/bender_base_layer</url>


    <buildtool_depend>catkin</buildtool_depend>
    
    <export>
      <metapackage/>
    </export>

</package>